--- a/scss/werlabs.scss
+++ b/scss/werlabs.scss
@@ -38,14 +38,21 @@ main {
   section:first-child {
     background-image: url("../images/lp-start-hero-comp.jpg");
     height: 450px;
-    background-position: 175% 0%;
+    background-position: 500px 0;
     background-repeat: no-repeat;
     background-size: auto 450px;
+
+    div {
+      position: absolute;
+      top: 100px;
+      left: 20px;
+      width: 60%;
+    }
   }
 
   h1 {
     color: $peach;
-    width: 50%;
+
     font-size: 4em;
     font-weight: 800;
     span {
@@ -54,6 +61,7 @@ main {
   }
 
   p {
+    width: 80%;
   }
 
   /* Place text in the middle of the image */
