--- a/scss/werlabs.scss
+++ b/scss/werlabs.scss
@@ -4,6 +4,7 @@ $pineGreen: #0f5441;
 $oceanBlue: #204c63;
 $burgundy: #6d475a;
 $yellow: #ffd779;
+$linkGray: #7a7a7a;
 
 // Fonts //
 @font-face {
@@ -31,10 +32,42 @@ body {
   font-weight: regular;
 }
 
+.w-container {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 18px;
+}
+
 header {
+  height: 75px;
+  img {
+    display: block;
+    margin: 25px 0px auto auto;
+    float: left;
+  }
+  nav {
+    overflow: hidden;
+    float: right;
+
+    ul {
+      list-style-type: none;
+      li {
+        display: inline-block;
+        margin-right: 20px;
+        a {
+          text-decoration: none;
+          color: $linkGray;
+        }
+      }
+    }
+  }
 }
 
 main {
+  max-width: 1140px;
+  margin: 0 auto;
+
+  position: relative;
   section:first-child {
     background-image: url("../images/lp-start-hero-comp.jpg");
     height: 450px;
@@ -44,9 +77,7 @@ main {
 
     div {
       position: absolute;
-      top: 100px;
-      left: 20px;
-      width: 60%;
+      width: 65%;
     }
   }
 
@@ -63,22 +94,6 @@ main {
   p {
     width: 80%;
   }
-
-  /* Place text in the middle of the image */
-  .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
-}
-
-.w-container {
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 0 18px;
 }
 
 // Fonts //
@@ -109,6 +124,9 @@ main {
 @media (min-width: 480px) {
   .w-container {
     padding: 0 24px;
+  }
+  .js-nav-toggle {
+    visibility: hidden;
   }
 }
 @media (min-width: 1200px) {
