--- a/scss/werlabs.scss
+++ b/scss/werlabs.scss
@@ -43,6 +43,7 @@ header {
   img {
     display: block;
     margin: 25px 0px auto auto;
+    padding-left: 18px;
     float: left;
   }
   nav {
@@ -66,8 +67,8 @@ header {
 main {
   max-width: 1140px;
   margin: 0 auto;
-
   position: relative;
+
   section:first-child {
     background-image: url("../images/lp-start-hero-comp.jpg");
     height: 450px;
@@ -79,20 +80,38 @@ main {
       position: absolute;
       width: 65%;
     }
-  }
+    h1 {
+      color: $peach;
 
-  h1 {
-    color: $peach;
+      font-size: 4em;
+      font-weight: 800;
+      span {
+        color: $oceanBlue;
+      }
+    }
 
-    font-size: 4em;
-    font-weight: 800;
-    span {
-      color: $oceanBlue;
+    p {
+      width: 80%;
     }
   }
 
-  p {
-    width: 80%;
+  section:nth-child(2) {
+    div > div > div {
+      width: 360px;
+      display: inline-block;
+      height: 500px;
+      div:nth-last-child(2) {
+        margin-top: 0;
+        display: block;
+        height: 110px;
+        width: 350px;
+        background-color: $burgundy;
+      }
+      div:only-child {
+        width: 100px;
+        height: ;
+      }
+    }
   }
 }
 
