--- a/scss/werlabs.scss
+++ b/scss/werlabs.scss
@@ -6,6 +6,7 @@ $burgundy: #6d475a;
 $yellow: #ffd779;
 $linkGray: #7a7a7a;
 $heroImagetextGray: #3d3d3c;
+$white: #ffffff;
 
 // Fonts //
 @font-face {
@@ -98,23 +99,60 @@ main {
     }
   }
 
-  section:nth-child(2) {
-    div > div > div {
-      width: 360px;
-      display: inline-block;
-      height: 500px;
-      div:nth-last-child(2) {
-        margin-top: 0;
-        display: block;
-        height: 110px;
-        width: 350px;
-        background-color: $burgundy;
+  .most-popular-label {
+    width: 125px;
+    display: inline-block;
+    position: absolute;
+    height: 35px;
+    background-color: $yellow;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 700;
+    font-size: 0.75em;
+    color: $heroImagetextGray;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    padding-top: 0;
+    z-index: -1;
+  }
+  .offer {
+    margin-top: 0;
+    display: inline-table;
+    padding-top: 50px;
+    height: 500px;
+    width: 350px;
+    margin-left: 11px;
+    margin-right: 11px;
+    .headline {
+      height: 125px;
+      width: 96%;
+      padding-left: 25px;
+      padding-top: 2px;
+      h3 {
+        margin-bottom: 7px;
       }
-      div:only-child {
-        width: 100px;
-        height: 60px;
+      p {
+        font-weight: 400;
+        font-size: 1.75em;
+        color: $white;
+        margin-top: 0px;
+      }
+      a {
+        text-decoration: none;
+        font-size: 1.25em;
+        font-weight: 400;
+        color: $white;
       }
     }
+  }
+  .burgundy-bckg {
+    background-color: $burgundy;
+  }
+  .oceanBlue-bckg {
+    background-color: $oceanBlue;
+  }
+  .pineGreen-bckg {
+    background-color: $pineGreen;
   }
 }
 
