--- a/scss/werlabs.scss
+++ b/scss/werlabs.scss
@@ -7,6 +7,7 @@ $yellow: #ffd779;
 $linkGray: #7a7a7a;
 $heroImagetextGray: #3d3d3c;
 $white: #ffffff;
+$copyrightGray: #5b5b5b;
 
 // Fonts //
 @font-face {
@@ -200,6 +201,7 @@ main {
     display: inline-block;
     text-transform: uppercase;
     text-align: center;
+    text-decoration: none;
     font-weight: 700;
     font-size: 1em;
     color: $burgundy;
@@ -227,16 +229,87 @@ main {
 footer {
   .footer-column {
     display: inline-block;
-    width: 19%;
+    width: 220px;
+    position: relative;
+    vertical-align: top;
+  }
+  .social {
+    display: inline-block;
+  }
+  .my-journal {
+    position: relative;
+    top: auto;
+    background-color: $white;
+    color: $peach;
+    -moz-border-radius: 28px;
+    -webkit-border-radius: 28px;
+    border-radius: 28px;
+    border: 2px solid $peach;
+    display: inline-block;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 1em;
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    margin-top: 16px;
+  }
+
+  .no-padding {
+    padding: 0;
+    text-align: center;
   }
   ul {
     list-style-type: none;
+
     li {
-      display: inline-block;
+      padding-bottom: 15px;
       img {
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
+        opacity: 0.5;
+        filter: grayscale(100%);
+        padding-left: 10px;
+        padding-right: 10px;
       }
+      a {
+        text-decoration: none;
+        color: $heroImagetextGray;
+        font-size: 1em;
+      }
+      a:hover {
+        text-decoration: none;
+        color: $peach;
+      }
+    }
+  }
+  .logo-copyright {
+    position: relative;
+    vertical-align: bottom;
+    margin-bottom: 16px;
+    img {
+      display: block;
+      margin: auto;
+    }
+    p {
+      color: $copyrightGray;
+      text-align: center;
+      font-size: 0.7em;
+      font-weight: 400;
+    }
+  }
+
+  .klarna {
+    p {
+      text-align: center;
+      color: $linkGray;
+    }
+    img {
+      display: block;
+      margin: auto;
+      width: 100px;
     }
   }
 }
