--- a/scss/werlabs.scss
+++ b/scss/werlabs.scss
@@ -108,8 +108,8 @@ main {
   .most-popular-label {
     width: 125px;
     display: inline-block;
-    position: absolute;
-    height: 35px;
+    float: left;
+    height: 25px;
     background-color: $yellow;
     text-transform: uppercase;
     text-align: center;
@@ -118,21 +118,26 @@ main {
     color: $heroImagetextGray;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-    top: 465px;
+    position: relative;
+    top: -25px;
   }
+
   .offer {
+    position: relative;
     margin-top: 0;
-    display: inline-table;
+    display: table-cell;
+    text-align: center;
     padding-top: 50px;
     height: 500px;
     width: 350px;
-    margin-left: 11px;
-    margin-right: 11px;
+    padding-left: 11px;
+    padding-right: 11px;
     .headline {
       height: 125px;
       width: 96%;
       padding-left: 25px;
       padding-top: 2px;
+      text-align: left;
       h3 {
         margin-bottom: 7px;
       }
@@ -160,10 +165,12 @@ main {
   .pineGreen-bckg {
     background-color: $pineGreen;
   }
+
   ul {
     list-style-type: none;
     color: $heroImagetextGray;
     font-size: 1.25em;
+    text-align: left;
     a {
       text-decoration: none;
       color: $peach;
@@ -177,14 +184,31 @@ main {
     content: "\2714\0020";
   }
 
-  button {
-    display: block;
-    background-color: $white;
+  .burgundy-btn {
     color: $burgundy;
+    border: 2px solid $burgundy;
+  }
+
+  .oceanBlue-btn {
+    color: $oceanBlue;
+    border: 2px solid $oceanBlue;
+  }
+  .pineGreen-btn {
+    color: $pineGreen;
+    border: 2px solid $pineGreen;
+  }
+
+  button a.pineGreen-bt:hover {
+    background-color: $pineGreen;
+    color: $white;
+  }
+
+  button {
+    background-color: $white;
+
     -moz-border-radius: 28px;
     -webkit-border-radius: 28px;
     border-radius: 28px;
-    border: 2px solid $burgundy;
     display: inline-block;
     cursor: pointer;
     text-transform: uppercase;
@@ -193,10 +217,7 @@ main {
     padding: 16px 128px;
     text-decoration: none;
   }
-  button:hover {
-    background-color: $burgundy;
-    color: $white;
-  }
+
   .show-more {
     display: inline-block;
     text-transform: uppercase;
@@ -206,10 +227,14 @@ main {
     font-size: 1em;
     color: $burgundy;
     margin-top: 20px;
-    margin-left: 37%;
   }
   .offer-content {
-    height: 100%;
+    postion: relative;
+  }
+
+  .offer-display {
+    display: table-row;
+    padding-bottom: 170px;
   }
 
   .all-blood-tests {
