--- a/scss/werlabs.scss
+++ b/scss/werlabs.scss
@@ -262,6 +262,28 @@ main {
       padding-bottom: 10px;
     }
   }
+
+  .carousel {
+    text-align: center;
+    padding-bottom: 150px;
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    h3 {
+      color: $pineGreen;
+      font-size: 2em;
+      font-weight: 800;
+    }
+    p {
+      color: $heroImagetextGray;
+      font-size: 1em;
+      font-weight: 400;
+      padding-left: 60px;
+      padding-right: 60px;
+    }
+  }
 }
 
 footer {
@@ -307,8 +329,9 @@ footer {
       img {
         width: 30px;
         height: 30px;
-        opacity: 0.5;
-        filter: grayscale(100%);
+        -webkit-filter: grayscale(100%) brightness(60%) contrast(10000000%);
+        opacity: 0.2;
+
         padding-left: 10px;
         padding-right: 10px;
       }
@@ -359,6 +382,9 @@ footer {
     padding: 0 24px;
   }
   .js-nav-toggle {
+    visibility: hidden;
+  }
+  .slick-dots {
     visibility: hidden;
   }
 }
