--- a/scss/werlabs.scss
+++ b/scss/werlabs.scss
@@ -1,38 +1,10 @@
-// Colours //
-$peach: #ff7865;
-$pineGreen: #0f5441;
-$oceanBlue: #204c63;
-$burgundy: #6d475a;
-$yellow: #ffd779;
-$linkGray: #7a7a7a;
-$heroImagetextGray: #3d3d3c;
-$white: #ffffff;
-$copyrightGray: #5b5b5b;
-
-// Fonts //
-@font-face {
-  font-family: "Proxima N W01";
-  font-style: normal;
-  font-weight: 400;
-  src: url("fonts/proxima-nova-regular.woff2") format("woff2"), url("fonts/proxima-nova-regular.woff") format("woff");
-}
-@font-face {
-  font-family: "Proxima N W01";
-  font-style: normal;
-  font-weight: 700;
-  src: url("fonts/proxima-nova-bold.woff2") format("woff2"), url("fonts/proxima-nova-bold.woff") format("woff");
-}
-@font-face {
-  font-family: "Proxima N W01";
-  font-style: normal;
-  font-weight: 800;
-  src: url("fonts/proxima-nova-extrabold.woff2") format("woff2"),
-    url("fonts/proxima-nova-extrabold.woff") format("woff");
-}
+@import "variables";
+@import "header";
+@import "main";
+@import "footer";
 
 // Mixins //
-
-@mixin offer-color($color) {
+@mixinoffer-color ($color) {
 }
 
 // Assignment Styles //
@@ -40,6 +12,17 @@ $copyrightGray: #5b5b5b;
 body {
   font-family: "Proxima N W01", Fallback, sans-serif;
   font-weight: regular;
+  color: $textGray;
+}
+
+a {
+  color: $linkGray;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+  color: $peach;
 }
 
 .w-container {
@@ -48,338 +31,75 @@ body {
   padding: 0 18px;
 }
 
-header {
-  height: 75px;
-  img {
-    display: block;
-    margin: 25px 0px auto auto;
-    padding-left: 18px;
-    float: left;
-  }
-  nav {
-    overflow: hidden;
-    float: right;
-
-    ul {
-      list-style-type: none;
-      li {
-        display: inline-block;
-        margin-right: 20px;
-        a {
-          text-decoration: none;
-          color: $linkGray;
-        }
-      }
-    }
-  }
-}
-
-main {
-  position: relative;
-
-  .bottom-padding {
-    padding-bottom: 150px;
-  }
-
-  .hero-image {
-    background-image: url("../images/lp-start-hero-comp.jpg");
-    height: 450px;
-    background-position: 500px 0;
-    background-repeat: no-repeat;
-    background-size: auto 450px;
-
-    .hero-text {
-      position: absolute;
-      width: 40%;
-      h1 {
-        color: $peach;
-        font-size: 4em;
-        font-weight: 800;
-        margin-bottom: 25px;
-        span {
-          color: $oceanBlue;
-        }
-      }
-
-      p {
-        width: 90%;
-        font-size: 1.5em;
-        color: $heroImagetextGray;
-      }
-    }
-  }
-
-  .most-popular-label {
-    width: 125px;
-    display: inline-block;
-    float: left;
-    height: 25px;
-    background-color: $yellow;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 700;
-    font-size: 0.75em;
-    color: $heroImagetextGray;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-    position: relative;
-    top: -25px;
-  }
-
-  .offer {
-    position: relative;
-    margin-top: 0;
-    display: table-cell;
-    text-align: center;
-    padding-top: 50px;
-    height: 500px;
-    width: 350px;
-    padding-left: 11px;
-    padding-right: 11px;
-    .headline {
-      height: 125px;
-      width: 96%;
-      padding-left: 25px;
-      padding-top: 2px;
-      text-align: left;
-      h3 {
-        margin-bottom: 7px;
-      }
-      p {
-        font-weight: 400;
-        font-size: 1.75em;
-        color: $white;
-        margin-top: 0px;
-      }
-      a {
-        text-decoration: none;
-        font-size: 1.25em;
-        font-weight: 400;
-        color: $white;
-      }
-    }
-  }
-  .burgundy-bckg {
-    background-color: $burgundy;
-  }
-
-  .oceanBlue-bckg {
-    background-color: $oceanBlue;
-  }
-  .pineGreen-bckg {
-    background-color: $pineGreen;
-  }
-
-  .burgundy {
-    color: $burgundy;
-  }
-  .oceanBlue {
-    color: $oceanBlue;
-  }
-  .pineGreen {
-    color: $pineGreen;
-  }
-
-  ul {
-    list-style-type: none;
-    color: $heroImagetextGray;
-    font-size: 1.25em;
-    text-align: left;
-    a {
-      text-decoration: none;
-      color: $peach;
-    }
-  }
-  li {
-    margin-bottom: 15px;
-  }
-
-  li:before {
-    content: "\2714\0020";
-  }
-
-  .burgundy-btn {
-    color: $burgundy;
-    border: 2px solid $burgundy;
-  }
-
-  .oceanBlue-btn {
-    color: $oceanBlue;
-    border: 2px solid $oceanBlue;
-  }
-  .pineGreen-btn {
-    color: $pineGreen;
-    border: 2px solid $pineGreen;
-  }
-
-  button a.pineGreen-bt:hover {
-    background-color: $pineGreen;
-    color: $white;
-  }
-
-  button {
-    background-color: $white;
-
-    -moz-border-radius: 28px;
-    -webkit-border-radius: 28px;
-    border-radius: 28px;
-    display: inline-block;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 1em;
-    padding: 16px 128px;
-    text-decoration: none;
-  }
-
-  .show-more {
-    display: inline-block;
-    text-transform: uppercase;
-    text-align: center;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 1em;
-    margin-top: 20px;
-  }
-  .offer-content {
-    postion: relative;
-  }
-
-  .offer-display {
-    display: table-row;
-    padding-bottom: 170px;
-  }
-
-  .all-blood-tests {
-    text-align: center;
-    text-align: center;
-    a {
-      text-decoration: none;
-      color: $peach;
-      font-size: 1.25em;
-      border-bottom: 1px solid $peach;
-      margin-bottom: 50px;
-      padding-bottom: 10px;
-    }
-  }
-
-  .carousel {
-    text-align: center;
-    padding-bottom: 150px;
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    h3 {
-      color: $pineGreen;
-      font-size: 2em;
-      font-weight: 800;
-    }
-    p {
-      color: $heroImagetextGray;
-      font-size: 1em;
-      font-weight: 400;
-      padding-left: 60px;
-      padding-right: 60px;
-    }
-  }
-}
-
-footer {
-  .footer-column {
-    display: inline-block;
-    width: 220px;
-    position: relative;
-    vertical-align: top;
-  }
-  .social {
-    display: inline-block;
-  }
-  .my-journal {
-    position: relative;
-    top: auto;
-    background-color: $white;
-    color: $peach;
-    -moz-border-radius: 28px;
-    -webkit-border-radius: 28px;
-    border-radius: 28px;
-    border: 2px solid $peach;
-    display: inline-block;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 1em;
-    padding: 10px;
-    width: 100%;
-    text-align: center;
-    text-decoration: none;
-    margin-top: 16px;
-  }
-
-  .no-padding {
-    padding: 0;
-    text-align: center;
-  }
-  ul {
-    list-style-type: none;
-
-    li {
-      padding-bottom: 15px;
-      img {
-        width: 30px;
-        height: 30px;
-        -webkit-filter: grayscale(100%) brightness(60%) contrast(10000000%);
-        opacity: 0.2;
-
-        padding-left: 10px;
-        padding-right: 10px;
-      }
-      a {
-        text-decoration: none;
-        color: $heroImagetextGray;
-        font-size: 1em;
-      }
-      a:hover {
-        text-decoration: none;
-        color: $peach;
-      }
-    }
-  }
-  .logo-copyright {
-    position: relative;
-    vertical-align: bottom;
-    margin-bottom: 16px;
-    img {
-      display: block;
-      margin: auto;
-    }
-    p {
-      color: $copyrightGray;
-      text-align: center;
-      font-size: 0.7em;
-      font-weight: 400;
-    }
-  }
-
-  .klarna {
-    p {
-      text-align: center;
-      color: $linkGray;
-    }
-    img {
-      display: block;
-      margin: auto;
-      width: 100px;
-    }
-  }
-}
-
 // media queries //
+
+@media (max-width: 480px) {
+  nav {
+  }
+
+  header {
+    height: 40px;
+    border-bottom: 1px solid $linkGray;
+
+    nav {
+      visibility: hidden;
+    }
+
+    .logo img {
+      display: block;
+      margin: 25px 0px auto auto;
+      padding-left: 18px;
+      float: left;
+      width: 300px;
+      height: auto;
+    }
+
+    a .js-nav-toggle {
+      display: inline-block;
+      span {
+        text-decoration: none;
+        color: $linkGray;
+      }
+    }
+  }
+
+  main {
+    position: relative;
+
+    .hero-image {
+      margin-top: 140px;
+      background-image: url("../images/lp-start-hero-small-comp.jpg");
+      height: 650px;
+      background-position: 0px 0;
+
+      .hero-text {
+        position: relative;
+        top: -140px;
+        width: 100%;
+        h1 {
+          font-size: 2.5em;
+          font-weight: 800;
+          margin-top: 5px;
+          margin-bottom: 5px;
+          span {
+            color: $oceanBlue;
+            margin-top: 5px;
+            margin-bottom: 5px;
+          }
+        }
+
+        p {
+          width: 90%;
+          font-size: 1em;
+        }
+      }
+    }
+  }
+}
 
 @media (min-width: 480px) {
   .w-container {
-    padding: 0 24px;
+    padding: 0 12px;
   }
   .js-nav-toggle {
     visibility: hidden;
