--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -211,34 +211,46 @@ main {
 }
 
 @media (max-width: 480px) {
+  body {
+    margin: 0;
+  }
   main {
     position: relative;
 
     .hero-image {
       margin-top: 140px;
       background-image: url("../images/lp-start-hero-small-comp.jpg");
-      height: 450px;
-      background-position: 0px 0;
+      height: 480px;
+      background-position: 0 30px;
 
       .hero-text {
         position: relative;
         top: -140px;
         width: 100%;
+        padding-left: 18px;
         h1 {
           font-size: 2.5em;
           font-weight: 800;
           margin-top: 5px;
           margin-bottom: 5px;
+          position: absolute;
+
           span {
             color: $oceanBlue;
             margin-top: 5px;
             margin-bottom: 5px;
+            position: absolute;
+            top: 30px;
+            font-size: 1em;
+            width: 330px;
           }
         }
 
         p {
-          width: 90%;
+          width: 65%;
           font-size: 1em;
+          position: absolute;
+          top: 105px;
         }
       }
     }
@@ -247,6 +259,7 @@ main {
       padding-left: 18px;
       padding-right: 18px;
       height: 420px;
+      width: 330px;
     }
   }
 }
