fixing nav menu

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -96,5 +96,10 @@ footer {
     .logo-copyright {
       padding-bottom: 180px;
     }
+    .klarna {
+      img {
+        padding-bottom: 50px;
+      }
+    }
   }
 }
