--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,6 +8,7 @@ $linkGray: #7a7a7a;
 $textGray: #3d3d3c;
 $white: #ffffff;
 $copyrightGray: #5b5b5b;
+$backgroundPeach: #fff7f4;
 
 // Fonts //
 @font-face {
