--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -20,10 +20,10 @@ footer {
     display: inline-block;
     cursor: pointer;
     text-transform: uppercase;
-    font-weight: 400;
-    font-size: 1em;
+    font-weight: 700;
+    font-size: 0.75em;
     padding: 10px;
-    width: 100%;
+    width: 200px;
     text-align: center;
     margin-top: 16px;
   }
@@ -34,6 +34,7 @@ footer {
   }
   ul {
     list-style-type: none;
+    padding-left: 60px;
 
     li {
       padding-bottom: 15px;
@@ -48,7 +49,7 @@ footer {
       }
       a {
         color: $textGray;
-        font-size: 1em;
+        font-size: 0.85em;
       }
     }
   }
@@ -69,6 +70,7 @@ footer {
   }
 
   .klarna {
+    padding-top: 100px;
     p {
       text-align: center;
       color: $linkGray;
@@ -77,6 +79,7 @@ footer {
       display: block;
       margin: auto;
       width: 100px;
+      padding-bottom: 50px;
     }
   }
 }
@@ -87,19 +90,22 @@ footer {
 
     ul {
       padding: 0;
+      li a {
+        font-size: 1em;
+      }
     }
+
+    .my-journal {
+      margin-bottom: 50px;
+    }
+
     .no-padding {
       position: absolute;
       bottom: -990px;
       margin-left: 30px;
     }
     .logo-copyright {
-      padding-bottom: 180px;
-    }
-    .klarna {
-      img {
-        padding-bottom: 50px;
-      }
+      padding-bottom: 50px;
     }
   }
 }
