--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2,7 +2,9 @@ main {
   position: relative;
 
   .bottom-padding {
-    padding-bottom: 150px;
+    margin-bottom: 100px;
+    padding-bottom: 50px;
+    margin-top: 40px;
   }
 
   .hero-image {
@@ -14,7 +16,7 @@ main {
 
     .hero-text {
       position: absolute;
-      width: 40%;
+      width: 500px;
       h1 {
         color: $peach;
         font-size: 4em;
@@ -32,10 +34,16 @@ main {
     }
   }
 
+  .wave {
+    background-image: url("../images/blood-tests-bg.svg");
+    background-position: 0px 160px;
+    background-repeat: no-repeat;
+    //TODO finish the image position
+  }
+
   .most-popular-label {
     width: 125px;
     display: inline-block;
-    float: left;
     height: 25px;
     background-color: $yellow;
     text-transform: uppercase;
@@ -44,8 +52,11 @@ main {
     font-size: 0.75em;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-    position: relative;
-    top: -25px;
+    position: absolute;
+    top: 25px;
+    left: 0;
+    z-index: -1;
+
     span {
       position: absolute;
       left: 18px;
@@ -61,11 +72,10 @@ main {
     padding-top: 50px;
     height: 500px;
     width: 350px;
-    padding-left: 11px;
-    padding-right: 11px;
+    padding-right: 30px;
+
     .headline {
       height: 125px;
-      width: 96%;
       padding-left: 25px;
       padding-top: 2px;
       text-align: left;
@@ -86,6 +96,10 @@ main {
       }
     }
     .checkmark-list {
+      background-color: $white;
+      margin-top: 0;
+      padding-top: 30px;
+
       li:before {
         content: "\2714\0020";
       }
@@ -115,8 +129,10 @@ main {
 
   ul {
     list-style-type: none;
-    font-size: 1.25em;
+    font-size: 1.1em;
     text-align: left;
+    min-height: 150px;
+
     a {
       color: $peach;
     }
@@ -139,11 +155,6 @@ main {
     border: 2px solid $pineGreen;
   }
 
-  button a.pineGreen-bt:hover {
-    background-color: $pineGreen;
-    color: $white;
-  }
-
   button {
     background-color: $white;
     -moz-border-radius: 28px;
@@ -153,7 +164,7 @@ main {
     cursor: pointer;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 1em;
+    font-size: 0.85em;
     padding: 16px 128px;
     text-decoration: none;
   }
@@ -163,17 +174,28 @@ main {
     background-color: $burgundy;
   }
 
+  button.oceanBlue-btn:hover {
+    background-color: $oceanBlue;
+    color: $white;
+  }
+
+  button.pineGreen-btn:hover {
+    background-color: $pineGreen;
+    color: $white;
+  }
+
   .show-more {
     display: inline-block;
     text-transform: uppercase;
     text-align: center;
     font-weight: 700;
-    font-size: 1em;
+    font-size: 0.75em;
     margin-top: 20px;
   }
 
   .offer-content {
     postion: relative;
+    background-color: $white;
   }
 
   .offer-display {
@@ -186,10 +208,10 @@ main {
     text-align: center;
     a {
       color: $peach;
-      font-size: 1.25em;
+      font-size: 1em;
       border-bottom: 1px solid $peach;
       margin-bottom: 50px;
-      padding-bottom: 10px;
+      padding-bottom: 5px;
     }
   }
 
@@ -259,12 +281,20 @@ main {
         }
       }
     }
+
     .offer {
       display: inline-block;
       padding-left: 18px;
       padding-right: 18px;
       height: 420px;
       width: 330px;
+    }
+    .offer:last-child {
+      display: none;
+    }
+
+    .most-popular-label {
+      left: 18px;
     }
   }
 }
