--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,12 +1,24 @@
 header {
+  @media $mobile {
+    border-bottom: 1px solid #e0e0e0;
+  }
+
   .logo {
     display: inline-block;
     margin: 15px 0px 15px 5px;
+    @media $mobile {
+      margin: 18px 18px 18px 0;
+      padding-left: 18px;
+      height: auto;
+    }
   }
 
   nav {
     overflow: hidden;
     float: right;
+    @media $mobile {
+      visibility: hidden;
+    }
 
     ul {
       list-style-type: none;
@@ -17,26 +29,7 @@ header {
       }
     }
   }
-}
-
-@media (max-width: 480px) {
-  nav {
-  }
-
-  header {
-    border-bottom: 1px solid #e0e0e0;
-
-    nav {
-      visibility: hidden;
-    }
-
-    .logo {
-      display: inline-block;
-      margin: 18px 18px 18px 0;
-      padding-left: 18px;
-      height: auto;
-    }
-
+  @media $mobile {
     .js-nav-toggle {
       display: inline-block;
       span {
