--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,8 @@ $linkGray: #7a7a7a;
 $textGray: #3d3d3c;
 $white: #ffffff;
 $copyrightGray: #5b5b5b;
-$backgroundPeach: #fff7f4;
+
+$mobile: "max-width: 480px";
 
 // Fonts //
 @font-face {
