--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,7 @@
 footer {
+  @media $mobile {
+    text-align: center;
+  }
   .footer-column {
     display: inline-block;
     width: 220px;
@@ -26,15 +29,26 @@ footer {
     width: 200px;
     text-align: center;
     margin-top: 16px;
+    @media $mobile {
+      margin-bottom: 50px;
+    }
   }
 
   .no-padding {
     padding: 0;
     text-align: center;
+    @media $mobile {
+      position: absolute;
+      bottom: -990px;
+      margin-left: 30px;
+    }
   }
   ul {
     list-style-type: none;
     padding-left: 60px;
+    @media $mobile {
+      padding: 0;
+    }
 
     li {
       padding-bottom: 15px;
@@ -50,6 +64,9 @@ footer {
       a {
         color: $textGray;
         font-size: 0.85em;
+        @media $mobile {
+          font-size: 1em;
+        }
       }
     }
   }
@@ -57,6 +74,9 @@ footer {
     position: relative;
     vertical-align: bottom;
     margin-bottom: 16px;
+    @media $mobile {
+      padding-bottom: 50px;
+    }
     img {
       display: block;
       margin: auto;
@@ -79,32 +99,6 @@ footer {
       display: block;
       margin: auto;
       width: 100px;
-      padding-bottom: 50px;
-    }
-  }
-}
-
-@media (max-width: 480px) {
-  footer {
-    text-align: center;
-
-    ul {
-      padding: 0;
-      li a {
-        font-size: 1em;
-      }
-    }
-
-    .my-journal {
-      margin-bottom: 50px;
-    }
-
-    .no-padding {
-      position: absolute;
-      bottom: -990px;
-      margin-left: 30px;
-    }
-    .logo-copyright {
       padding-bottom: 50px;
     }
   }
