--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,7 +1,50 @@
 main {
   position: relative;
 
-  .bottom-padding {
+  ul {
+    list-style-type: none;
+    font-size: 1.1em;
+    text-align: left;
+    min-height: 150px;
+
+    a {
+      color: $peach;
+    }
+  }
+  li {
+    margin-bottom: 15px;
+  }
+
+  button {
+    background-color: $white;
+    -moz-border-radius: 28px;
+    -webkit-border-radius: 28px;
+    border-radius: 28px;
+    display: inline-block;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 0.85em;
+    padding: 16px 128px;
+    text-decoration: none;
+  }
+
+  button.burgundy-btn:hover {
+    color: $white;
+    background-color: $burgundy;
+  }
+
+  button.oceanBlue-btn:hover {
+    background-color: $oceanBlue;
+    color: $white;
+  }
+
+  button.pineGreen-btn:hover {
+    background-color: $pineGreen;
+    color: $white;
+  }
+
+  .offer-display {
     margin-bottom: 100px;
     padding-bottom: 50px;
     margin-top: 40px;
@@ -52,7 +95,6 @@ main {
           }
         }
       }
-
       p {
         width: 90%;
         font-size: 1.5em;
@@ -150,8 +192,8 @@ main {
     }
   }
 
-  @media ($mobile) {
-    .offer:last-child {
+  .offer:last-child {
+    @media ($mobile) {
       display: none;
     }
   }
@@ -191,49 +233,6 @@ main {
     border: 2px solid $pineGreen;
   }
 
-  ul {
-    list-style-type: none;
-    font-size: 1.1em;
-    text-align: left;
-    min-height: 150px;
-
-    a {
-      color: $peach;
-    }
-  }
-  li {
-    margin-bottom: 15px;
-  }
-
-  button {
-    background-color: $white;
-    -moz-border-radius: 28px;
-    -webkit-border-radius: 28px;
-    border-radius: 28px;
-    display: inline-block;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 0.85em;
-    padding: 16px 128px;
-    text-decoration: none;
-  }
-
-  button.burgundy-btn:hover {
-    color: $white;
-    background-color: $burgundy;
-  }
-
-  button.oceanBlue-btn:hover {
-    background-color: $oceanBlue;
-    color: $white;
-  }
-
-  button.pineGreen-btn:hover {
-    background-color: $pineGreen;
-    color: $white;
-  }
-
   .show-more {
     display: inline-block;
     text-transform: uppercase;
@@ -249,7 +248,7 @@ main {
     padding-bottom: 25px;
   }
 
-  .offer-display {
+  .offers {
     display: table-row;
     padding-bottom: 170px;
   }
